--- a/scaffolds/django/docker-compose.yml
+++ b/scaffolds/django/docker-compose.yml
@@ -3,9 +3,11 @@ version: '3'
 services:
   postgres:
     image: postgres
+    container_name: <project_name>_postgres
   web: &base
     build: .
     command: python3 manage.py runserver 0.0.0.0:8000
+    container_name: <project_name>_web
     volumes:
       - .:/app
     ports:
@@ -15,6 +17,16 @@ services:
     env_file:
       - ./config.env
   migrations:
-      <<: *base
-      command: python manage.py migrate --no-input
-      ports: []
+    <<: *base
+    command: python manage.py migrate --no-input
+    container_name: <project_name>_migrations
+    ports: []
+  nginx:
+    container_name: <project_name>_nginx
+    build:
+      context: ./nginx/
+      dockerfile: Dockerfile
+    depends_on:
+      - web
+    ports:
+      - "0.0.0.0:80:80"
